Thu Sep 26 22:08:11 2013  Zachary Scott  <e@zzak.io>

	* lib/observer.rb: [DOC] syntax improvement in example by @chastell
	  [Fixes GH-400] https://github.com/ruby/ruby/pull/400

Thu Sep 26 22:03:15 2013  Zachary Scott  <e@zzak.io>

	* ext/digest/digest.c: [DOC] typo in overview by @chastell
	  [Fixes GH-399] https://github.com/ruby/ruby/pull/399

Thu Sep 26 22:00:42 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl.c: [DOC] typo in example by @zoranzaric
	  [Fixes GH-401] https://github.com/ruby/ruby/pull/401

Thu Sep 26 21:07:49 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-delete-backward-char): Add
	  support for smartparen-mode.

	* misc/ruby-electric.el (ruby-electric-cua-replace-region-maybe)
	  (ruby-electric-cua-delete-region-maybe): New functions that
	  combine `ruby-electric-cua-*-region` with
	  `ruby-electric-cua-*-region-p`, using a slightly better way to
	  detect if it is in cua-mode.

Thu Sep 26 16:51:00 2013  Shota Fukumori  <her@sorah.jp>

	* insns.def (opt_regexpmatch2): Check String#=~ hasn't overridden
	  before calling rb_reg_match().

	* test/ruby/test_string.rb: Test for above.

	* vm.c (vm_init_redefined_flag): Add BOP flag for String#=~

	[ruby-core:57385] [Bug #8953]

Thu Sep 26 16:43:42 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Avoid use of the interactive function
	  `self-insert-command` which fires `post-self-insert-hook` and
	  `post-command-hook`, to make the ruby-electric commands work
	  nicely with those minor modes that make use of them to do
	  similar input assistance, such as electric-pair-mode,
	  autopair-mode and smartparens-mode.

Thu Sep 26 16:24:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def (opt_regexpmatch1): check Regexp#=~ is not defined before
	  calling rb_reg_match()

	* test/ruby/test_regexp.rb: add test

	* vm.c (ruby_vm_redefined_flag): change type to short[]
